@@ -29,29 +29,33 @@ import org.stagemonitor.configuration.ConfigurationOption;
 import org.stagemonitor.configuration.ConfigurationOptionProvider;
 
 public class TracerConfiguration extends ConfigurationOptionProvider {
-    public static final String ACTIVE = "active";
+    public static final String RECORDING = "recording";
 
-    private final ConfigurationOption<Boolean> active = ConfigurationOption.booleanOption()
-        .key(ACTIVE)
+    private final ConfigurationOption<Boolean> recording = ConfigurationOption.booleanOption()
+        .key(RECORDING)
+        .aliasKeys("active")
         .configurationCategory(CoreConfiguration.CORE_CATEGORY)
-        .description("A boolean specifying if the agent should be active or not.\n" +
-            "When active, the agent instruments incoming HTTP requests, tracks errors and collects and sends metrics.\n" +
-            "When inactive, the agent works as a noop, not collecting data and not communicating with the APM sever.\n" +
+        .description("A boolean specifying if the agent should be recording or not.\n" +
+            "When recording, the agent instruments incoming HTTP requests, tracks errors and collects and sends metrics.\n" +
+            "When not recording, the agent works as a noop, not collecting data and not communicating with the APM sever,\n" +
+            "except for polling the central configuration endpoint.\n" +
             "As this is a reversible switch, agent threads are not being killed when inactivated, but they will be \n" +
             "mostly idle in this state, so the overhead should be negligible.\n" +
             "\n" +
-            "You can use this setting to dynamically disable Elastic APM at runtime.")
+            "You can use this setting to dynamically disable Elastic APM at runtime.\n" +
+            "\n" +
+            "The key of this option used to be `active`. The old key still works but is now deprecated.")
         .dynamic(true)
         .buildWithDefault(true);
 
     /**
-     * Returns the `active` configuration option.
+     * Returns the `recording` configuration option.
      * NOTE: this configuration cannot be used as a global state to be queried by any tracer component like plugins, as
      * it does not determine the tracer state on its own. Therefore, it should remain package private
      *
-     * @return the `active` configuration option
+     * @return the `recording` configuration option
      */
-    ConfigurationOption<Boolean> getActiveConfig() {
-        return active;
+    ConfigurationOption<Boolean> getRecordingConfig() {
+        return recording;
     }
 }
